--- a/admin/language/en-GB/en-GB.com_jem.ini
+++ b/admin/language/en-GB/en-GB.com_jem.ini
@@ -194,8 +194,8 @@ COM_JEM_FIELD_CATEGORIES = "Categories"
 COM_JEM_NEW_EVENT = "Add Event"
 COM_JEM_SELECT_CONTACT="Select Contact"
 COM_JEM_RESET_HITS="Reset Hits"
-COM_JEM_EDITEVENT_WARN_RECURRENCE_TITLE="ATTENTION!"
-COM_JEM_EDITEVENT_WARN_RECURRENCE_TEXT="This event is part of a set of recurring events. If you save this event it will be removed from this set. Even if you just save it without editing at all.<br>If you choose any recurrence in this event a new set of recurring events will be created."
+COM_JEM_EVENT_WARN_RECURRENCE_TITLE="ATTENTION!"
+COM_JEM_EVENT_WARN_RECURRENCE_TEXT="This event is part of a set of recurring events."
 COM_JEM_EDITEVENT_WARN_RECURRENCE_FIRST_TEXT="This event is the first one of a set of recurring events. If you save this event the set will be dissolved. Even if you just save it without editing at all.<br>If you choose any recurrence in this event a new set of recurring events will be created."
 COM_JEM_RECURRENCE_EXDATES="Exclude Dates"
 COM_JEM_RECURRENCE_EXDATES_DESC="Exclude dates from recurrence-set"
