adapted module files
- changed versionnr
- copied language strings
- added class to type="radio"

--- a/modules/mod_jem/language/en-GB/en-GB.mod_jem.sys.ini
+++ b/modules/mod_jem/language/en-GB/en-GB.mod_jem.sys.ini
@@ -1,4 +1,4 @@
-; @version 1.9.6
+; @version 3.0.1
 ; @package JEM
 ; @subpackage JEM Upcoming Events Basic Module
 ; @copyright (C) 2005-2009 Christoph Lukes
@@ -11,3 +11,4 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 MOD_JEM="JEM - Module-Basic"
+MOD_JEM_XML_DESCRIPTION="JEM - Module-Basic<BR>Displays the events in a module position"
