--- a/modules/mod_jem_teaser/language/en-GB/en-GB.mod_jem_teaser.ini
+++ b/modules/mod_jem_teaser/language/en-GB/en-GB.mod_jem_teaser.ini
@@ -1,4 +1,4 @@
-; @version 1.9.7
+; @version 3.0.1
 ; @package JEM
 ; @subpackage JEM Teaser Module
 ; @copyright (C) 2005-2009 Christoph Lukes
@@ -9,6 +9,9 @@
 ; Please join the translation team if you want to contribute your changes to the translations
 ;
 ; Note : All ini files need to be saved as UTF-8 - No BOM
+
+MOD_JEM_TEASER="JEM - Module-Teaser"
+MOD_JEM_TEASER_XML_DESCRIPTION="JEM Latest Events Teaser Module. JEM is based on Eventlist by Christoph Lukes (http://www.schlu.net)"
 
 MOD_JEM_TEASER_EVENTS_IN_MODULE="Events in module"
 MOD_JEM_TEASER_EVENTS_IN_MODULE_DESC="Number of events shown in module."
@@ -53,8 +56,6 @@ MOD_JEM_TEASER_USE_GLOBAL="Use global"
 MOD_JEM_TEASER_NO_CACHING="No caching"
 MOD_JEM_TEASER_CACHE_TIME="Cache Time"
 MOD_JEM_TEASER_CACHE_TIME_DESC="The time before the module is recached."
-MOD_JEM_TEASER="JEM Latest Events Teaser Module"
-MOD_JEM_TEASER_XML_DESCRIPTION="JEM Latest Events Teaser Module. JEM is based on Eventlist by Christoph Lukes (http://www.schlu.net)"
 MOD_JEM_TEASER_ALLOW_LINEBREAK="Allow Linebreak"
 MOD_JEM_TEASER_ALLOW_LINEBREAK_DESC="Allow Linebreak"
 MOD_JEM_TEASER_COLOR="Color"
@@ -68,7 +69,6 @@ MOD_JEM_TEASER_RED="Red"
 MOD_JEM_TEASER_FIELD_READMORE_DESC="If set to Show, the 'Read more...' link will show if Main text has been provided for an Event."
 MOD_JEM_TEASER_FIELD_READMORE_LABEL="'Read more...' Link"
 
-MOD_JEM_TEASER_XML_DESCRIPTION="JEM - Module-Teaser"
 
 ;Frontend
 MOD_JEM_TEASER_TODAY="Today"
