--- a/modules/mod_jem_wide/language/en-GB/en-GB.mod_jem_wide.ini
+++ b/modules/mod_jem_wide/language/en-GB/en-GB.mod_jem_wide.ini
@@ -1,4 +1,4 @@
-; @version 1.9.6
+; @version 3.0.1
 ; @package JEM
 ; @subpackage JEM Latest Events Wide Module
 ; @copyright (C) 2005-2009 Christoph Lukes
@@ -10,6 +10,7 @@
 ;
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
+MOD_JEM_WIDE="JEM - Module-Wide"
 MOD_JEM_WIDE_EVENTS_IN_MODULE="Events in module"
 MOD_JEM_WIDE_EVENTS_IN_MODULE_DESC="Number of events shown in module."
 MOD_JEM_WIDE_UPCOMING_ARCHIVED_OR_CURRENT="Events Display-Type"
