--- a/modules/mod_jem/language/en-GB/en-GB.mod_jem.ini
+++ b/modules/mod_jem/language/en-GB/en-GB.mod_jem.ini
@@ -1,4 +1,4 @@
-; @version 1.9.7
+; @version 3.0.1
 ; @package JEM
 ; @subpackage JEM Upcoming Events Basic Module
 ; @copyright (C) 2005-2009 Christoph Lukes
@@ -9,6 +9,9 @@
 ; Please join the translation team if you want to contribute your changes to the translations
 ;
 ; Note : All ini files need to be saved as UTF-8 - No BOM
+
+MOD_JEM="JEM - Module-Basic"
+MOD_JEM_XML_DESCRIPTION="JEM - Module-Basic<BR>Displays the events in a module position"
 
 MOD_JEM_EVENTS_IN_MODULE="Events in module"
 MOD_JEM_EVENTS_IN_MODULE_DESC="Number of events shown in module."
@@ -46,5 +49,3 @@ MOD_JEM_CACHE_TIME_DESC="The time before the module is recached."
 MOD_JEM_OCCURING_IN="Events occuring in (days)"
 MOD_JEM_OCCURING_IN_DESC="If set, only events occuring after the specified number of days will be listed."
 MOD_JEM_OPEN_DATE="Open date"
-
-MOD_JEM_XML_DESCRIPTION="JEM - Module-Basic<BR>Displays the events in a module position"
