--- a/modules/mod_jem_teaser/language/en-GB/en-GB.mod_jem_teaser.sys.ini
+++ b/modules/mod_jem_teaser/language/en-GB/en-GB.mod_jem_teaser.sys.ini
@@ -1,8 +1,8 @@
-; @version 1.9.6
+; @version 3.0.1
 ; @package JEM
 ; @subpackage JEM Teaser Module
-; @copyright (C) 2005-2009 Christoph Lukes
 ; @copyright (C) 2013-2014 joomlaeventmanager.net
+; @copyright (C) 2005-2009 Christoph Lukes
 ; @license http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 ;
 ; All translations can be found at https://www.transifex.com/projects/p/JEM/
@@ -11,3 +11,4 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 MOD_JEM_TEASER="JEM - Module-Teaser"
+MOD_JEM_TEASER_XML_DESCRIPTION="JEM Latest Events Teaser Module. JEM is based on Eventlist by Christoph Lukes (http://www.schlu.net)"
