--- a/modules/mod_jem_wide/language/en-GB/en-GB.mod_jem_wide.sys.ini
+++ b/modules/mod_jem_wide/language/en-GB/en-GB.mod_jem_wide.sys.ini
@@ -1,8 +1,8 @@
-; @version 1.9.7
+; @version 3.0.1
 ; @package JEM
 ; @subpackage JEM Latest Events Wide Module
-; @copyright (C) 2005-2009 Christoph Lukes
 ; @copyright (C) 2013-2014 joomlaeventmanager.net
+; @copyright (C) 2005-2009 Christoph Lukes
 ; @license http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 ;
 ; All translations can be found at https://www.transifex.com/projects/p/JEM/
@@ -11,3 +11,5 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 MOD_JEM_WIDE="JEM - Module-Wide"
+MOD_JEM_WIDE_XML_DESCRIPTION="JEM - Module-Wide <br>Displays events in a module position at a wide orientation"
+
