added language strings

--- a/admin/language/en-GB/en-GB.com_jem.ini
+++ b/admin/language/en-GB/en-GB.com_jem.ini
@@ -317,13 +317,13 @@ COM_JEM_HOUSEKEEPING_TRUNCATE_ALL_DATA_DONE="All JEM tables have been truncated.
 ;IMPORT-View
 COM_JEM_IMPORT="Import"
 COM_JEM_IMPORT_EL_TAB="Eventlist Import"
-COM_JEM_IMPORT_EL_EXISTING_JEM_DATA="Existing Jem data has been found. Import only works if data tables are empty."
+COM_JEM_IMPORT_EL_EXISTING_JEM_DATA="<label class='label label-info'>Existing Jem data has been found </label><br>EL-Import only works if data tables are empty."
 COM_JEM_IMPORT_EL_DETECTED_JEM_TABLES="Detected JEM tables"
 COM_JEM_IMPORT_EL_HOUSEKEEPING="You can delete existing data here"
-COM_JEM_IMPORT_EL_NO_VERSION_DETECTED="An installation of Eventlist has not been detected."
-COM_JEM_IMPORT_EL_VERSION_DETECTED="An installation of Eventlist has been detected."
+COM_JEM_IMPORT_EL_NO_VERSION_DETECTED="An installation of Eventlist has not been detected"
+COM_JEM_IMPORT_EL_VERSION_DETECTED="<label class='label label-info'>An installation of Eventlist has been detected.</span>"
 COM_JEM_IMPORT_EL_DETECTED_VERSION="Detected Eventlist version"
-COM_JEM_IMPORT_EL_DETECTED_TABLES="The following Eventlist tables have been found:"
+COM_JEM_IMPORT_EL_DETECTED_TABLES="The following data has been found:"
 COM_JEM_IMPORT_EL_DETECTED_TABLES_NUM_ROWS="%s (%d rows)"
 COM_JEM_IMPORT_EL_MISSING_TABLES="The following Eventlist tables are missing or have not been found:"
 COM_JEM_IMPORT_EL_MISSING_TABLES_NONE="None"
@@ -331,11 +331,12 @@ COM_JEM_IMPORT_EL_IMPORT_FROM_EL="Import from Eventlist"
 COM_JEM_IMPORT_EL_PREFIX="You may specify a custom table prefix. Leave field empty to use the standard prefix of the current Joomla installation. A custom table prefix might be necessary if you want to import from an old or another Joomla installation."
 COM_JEM_IMPORT_CHECK="Check"
 COM_JEM_IMPORT_EL_TABLES_DETECTED_PROCEED="Eventlist tables have been found. Proceed now."
-COM_JEM_IMPORT_PROCEED="Proceed"
+COM_JEM_IMPORT_PROCEED="Proceed "
 COM_JEM_IMPORT_EL_TRY_IMPORT="JEM can now try to import the Eventlist data, so that they are available within JEM."
 COM_JEM_IMPORT_EL_ATTENTION="Attention"
 COM_JEM_IMPORT_EL_ATTENTION_DURATION="The import process can take several minutes, depending on the amount of data. Be sure not to close the window or to leave the page.<br/>The import script will refresh the page regularly and print a message once it has finished."
-COM_JEM_IMPORT_EL_COPY_IMAGES="Copy EL images to JEM folder. Skipping this can lead to missing images in the frontend, in this case you have to copy or move them by hand."
+COM_JEM_IMPORT_EL_COPY_IMAGES="Copy EL images to JEM folder"
+COM_JEM_IMPORT_EL_COPY_IMAGES_WARNING="Skipping this can lead to missing images in the frontend, in this case you have to copy or move them by hand."
 COM_JEM_IMPORT_EL_IMPORT_WORK_IN_PROGRESS="Work in progress."
 COM_JEM_IMPORT_EL_IMPORT_WORKING_STEP_COPY_DB="Importing table %s, row %d of %d"
 COM_JEM_IMPORT_EL_IMPORT_WORKING_STEP_REBUILD="Rebuilding categories table"
@@ -355,6 +356,31 @@ COM_JEM_IMPORT_DATA="Import Data"
 COM_JEM_IMPORT_EVENTS="Events"
 COM_JEM_IMPORT_FIRSTROW="The first row of the file must contain the column names."
 COM_JEM_IMPORT_INSTRUCTIONS="Instructions"
+COM_JEM_IMPORT_JEM_TAB="JEM Import"
+COM_JEM_IMPORT_JEM_EXISTING_JEM_DATA="<label class='label label-info'>Existing Jem data has been found </label><br>JEM-Import only works if data tables are empty."
+COM_JEM_IMPORT_JEM_DETECTED_TABLES="Detected JEM tables"
+COM_JEM_IMPORT_JEM_DETECTED_TABLES_NUM_ROWS="%s (%d rows)"
+COM_JEM_IMPORT_JEM_HOUSEKEEPING="You can delete existing data here"
+COM_JEM_IMPORT_JEM_TRY_IMPORT="JEM can now try to import the Eventlist data, so that they are available within JEM."
+COM_JEM_IMPORT_JEM_ATTENTION="Attention"
+COM_JEM_IMPORT_JEM_ATTENTION_DURATION="The import process can take several minutes, depending on the amount of data. Be sure not to close the window or to leave the page.<br/>The import script will refresh the page regularly and print a message once it has finished."
+COM_JEM_IMPORT_JEM_COPY_IMAGES="Copy EL images to JEM folder. Skipping this can lead to missing images in the frontend, in this case you have to copy or move them by hand."
+COM_JEM_IMPORT_JEM_DETECTED_VERSION="Detected JEM version"
+COM_JEM_IMPORT_JEM_IMPORT_FROM_JEM="Import from JEM"
+COM_JEM_IMPORT_JEM_IMPORT_WORK_IN_PROGRESS="Work in progress."
+COM_JEM_IMPORT_JEM_IMPORT_WORKING_STEP_COPY_DB="Importing table %s, row %d of %d"
+COM_JEM_IMPORT_JEM_IMPORT_WORKING_STEP_REBUILD="Rebuilding categories table"
+COM_JEM_IMPORT_JEM_IMPORT_WORKING_STEP_COPY_IMAGES="Copying images"
+COM_JEM_IMPORT_JEM_IMPORT_WORKING_STEP_COPY_ATTACHMENTS="Copying attachments"
+COM_JEM_IMPORT_JEM_IMPORT_WORKING_STEP_COPY_IMAGES_SKIPPED="Copying images skipped"
+COM_JEM_IMPORT_JEM_IMPORT_WORKING_STEP_COPY_ATTACHMENTS_SKIPPED="Copying attachments skipped"
+COM_JEM_IMPORT_JEM_IMPORT_FINISHED="Import finished!"
+COM_JEM_IMPORT_JEM_MISSING_TABLES="The following Eventlist tables are missing or have not been found:"
+COM_JEM_IMPORT_JEM_NO_VERSION_DETECTED="An installation of JEM has not been detected."
+COM_JEM_IMPORT_JEM_MISSING_TABLES_NONE="None"
+COM_JEM_IMPORT_JEM_PREFIX="You may specify a custom table prefix. Leave field empty to use the standard prefix of the current Joomla installation. A custom table prefix might be necessary if you want to import from an old or another Joomla installation."
+COM_JEM_IMPORT_JEM_TABLES_DETECTED_PROCEED="JEM tables have been found. Proceed now."
+COM_JEM_IMPORT_JEM_VERSION_DETECTED="<label class='label label-info'>An installation of JEM has been detected</span>"
 COM_JEM_IMPORT_NUMBER_OF_FIELDS="%d fields found."
 COM_JEM_IMPORT_NUMBER_OF_FIELDS_COUNT_ERROR="Wrong number of fields (%d) in record %d."
 COM_JEM_IMPORT_NUMBER_OF_FIELDS_USEABLE="%d fields are useable and will be imported."
@@ -512,6 +538,8 @@ COM_JEM_SETTINGS_FIELD_REGNAME="Display name"
 COM_JEM_SETTINGS_FIELD_REGNAME_DESC="Choose if the name or username should be displayed"
 COM_JEM_SETTINGS_FIELD_SHOW_ARCHIVE_ICON="Show Archive-icon"
 COM_JEM_SETTINGS_FIELD_SHOW_ARCHIVE_ICON_DESC="Show/Hide the archive icon"
+COM_JEM_SETTINGS_FIELD_SHOW_DROPDOWN_BUTTON="Show Dropdown button"
+COM_JEM_SETTINGS_FIELD_SHOW_DROPDOWN_BUTTON_DESC="Show/Hide the dropdown button."
 COM_JEM_SETTINGS_FIELD_SHOW_EMAIL_ICON="Show Email-Icon"
 COM_JEM_SETTINGS_FIELD_SHOW_EMAIL_ICON_DESC="Show/Hide the email icon"
 COM_JEM_SETTINGS_FIELD_SHOW_FILTER="Show Filter"
